Migrated project to jdk 1.8. and use lis-central-jar.